<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="32dp"
    android:orientation="vertical"
    android:background="@drawable/background_img4"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/auction5"
            android:gravity="center"
            android:text="@string/text13"
            android:textColor="#000066"
            android:textSize="60sp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/idText"
            android:hint="@string/loginID"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_gravity="center_horizontal"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordText"
            android:hint="@string/loginPassword"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/loginButton"
                android:text="@string/strLoginButton"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="64dp"
                android:background="#40000000"
                android:layout_gravity="center"
                android:textColor="#ffffffff"
                android:textSize="16sp"/>


            <Button
                android:id="@+id/registerButton"
                android:text="@string/strRegisterButton"
                android:layout_width="140dp"
                android:layout_height="52dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="8dp"
                android:background="#40000000"
                android:layout_gravity="center"
                android:textColor="#ffffffff"
                android:textSize="16sp"/>

        </LinearLayout>


        <CheckBox
            android:id="@+id/checkBox"
            android:text="@string/checkBox"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</LinearLayout>